# llm_reasoning_setup

./: README.md  README.me  pyproject.toml  requirements.txt  run_gsm8k.sh  run_gsm8k_multiple_reasoners.py
methods/: bfs.py
models/: models.py
prompts/: gsm8k.py
tasks/: __init__.py  gsm8k.py
