[tool.poetry]
name = "ma_tot"
version = "0.1.0"
description = "MA-ToT Project"
authors = ["Ashwarya Maratha <marathaashwarya@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.8"
openai = "^0.27.7"
requests = "^2.31.0"
numpy = "^2.2.2"
backoff = "^2.2.1"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"